--- a/Academico/Views/Aluno/Edit.cshtml
+++ b/Academico/Views/Aluno/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Edição</h1>
 
 <h4>Aluno</h4>
 <hr />
@@ -62,8 +62,9 @@
                 <input asp-for="Cep" class="form-control" />
                 <span asp-validation-for="Cep" class="text-danger"></span>
             </div>
+            <input type="hidden" asp-for="AlunoID" />
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Gravar Alterações" class="btn btn-primary" />
             </div>
         </form>
     </div>
